--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hash": "^0.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
+    "nodemon": "^3.1.0",
     "web-push": "^3.6.7"
   }
 }
