--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "nodemon": "^3.1.0",
+    "semver": "^7.6.2",
     "web-push": "^3.6.7"
   }
 }
